--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8">
     <title>Brokoons Dashboard</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
+     <!-- PWA META TAGS -->
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="theme-color" content="#1b5e20">
+    <link rel="manifest" href="manifest.json">
+    <link rel="icon" href="brl2.png" type="image/png">
     <style>
         /* MAIN STYLES */
         * {
@@ -3101,5 +3108,6 @@ document.addEventListener('touchend', function(event) {
 </body>
 
 </html>
+
 
 
