--- a/index.html
+++ b/index.html
@@ -3118,9 +3118,11 @@ function loadAllData() {
             }
         });
     </script>
+    <script src="app.js"></script>
 </body>
 
 </html>
+
 
 
 
