--- a/index.html
+++ b/index.html
@@ -1564,7 +1564,8 @@ body {
             <p style="font-size: 12px; color: #666;">Logged in as: <span id="currentUser">Guest</span></p>
         </footer>
     </div>
-
+ <script src="app.js"></script>
+<!-- TEMPORARILY DISABLED
     <script>
         // ========== AUTHENTICATION ==========
         const TEAM_USERS = {
@@ -3117,10 +3118,9 @@ function loadAllData() {
                 closePhotoPreview();
             }
         });
-    </script>
-    <script src="app.js"></script>
+      </script>
+-->
 </body>
-
 </html>
 
 
