--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="icon" href="brl2.png" type="image/png">
     
     <style>
-        /* MAIN STYLES */
+        /* ALL YOUR STYLES REMAIN EXACTLY THE SAME */
         * {
             margin: 0;
             padding: 0;
